# rag-chat-app

./: .gitignore  README.md
backend/: chunks.pkl  db.py  main.py  pyproject.toml  rag.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
