[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "deepeval>=4.0.5",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "ipython>=9.14.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langchain-weaviate>=0.0.6",
    "notebook>=7.5.6",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "unstructured[pdf]>=0.22.31",
    "uvicorn>=0.49.0",
    "weaviate-client>=4.21.2",
]
